--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "tests"
   },
   "scripts": {
+    "prepare": "node server/prepare-data.js",
     "build": "ember build --environment=production",
+    "build-docs": "ember build --environment=docs",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel 'lint:!(fix)'",
     "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
@@ -24,12 +26,17 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
+    "@ember/render-modifiers": "^1.0.2",
     "@ember/test-helpers": "^2.1.4",
     "@glimmer/component": "^1.0.3",
     "@glimmer/tracking": "^1.0.3",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^4.6.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.10.1",
+    "csvtojson": "^2.0.10",
+    "d3": "^7.1.1",
+    "ember-auto-import": "^1.12.0",
+    "ember-bootstrap": "^4.9.0",
     "ember-cli": "~3.24.0",
     "ember-cli-app-version": "^4.0.0",
     "ember-cli-babel": "^7.23.0",
@@ -38,11 +45,14 @@
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.1",
+    "ember-composable-helpers": "^3.2.0",
     "ember-data": "~3.24.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.2",
+    "ember-font-awesome": "^4.0.0-rc.4",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-models-table": "^3.4.0",
     "ember-page-title": "^6.0.3",
     "ember-qunit": "^5.1.1",
     "ember-resolver": "^8.0.2",
@@ -54,7 +64,11 @@
     "eslint-plugin-ember": "^10.1.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "express": "^4.17.1",
+    "glob": "^4.5.3",
     "loader.js": "^4.7.0",
+    "moment": "^2.29.1",
+    "morgan": "^1.10.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "qunit": "^2.13.0",
